Add maxent and rmaxent

--- a/geospatial/Dockerfile
+++ b/geospatial/Dockerfile
@@ -20,11 +20,18 @@ RUN    git clone https://github.com/cbig/zonation-core \
     && rm -rf zonation-core
 
 COPY   finzone finzone
-RUN    R -e "remotes::install_local('finzone')" \
-RUN    R -e "remotes::install_github(c('wkmor1/rzonation', 'wkmor1/finbif@dev'))" \
-    && echo "\noptions(shiny.port = 3838, shiny.host = '0.0.0.0') \
-       \n" >> /usr/local/lib/R/etc/Rprofile.site \
+RUN    R -e "install.packages('dismo')" \
+    && R -e "remotes::install_local('finzone')" \
+    && R -e "remotes::install_github(c('wkmor1/rzonation', 'wkmor1/finbif@dev', 'johnbaums/rmaxent'))" \
+    && echo "\noptions(shiny.port = 3838, shiny.host = '0.0.0.0')\n" >> /usr/local/lib/R/etc/Rprofile.site \
     && rm -rf finzone
+
+RUN    git clone https://github.com/mrmaxent/Maxent.git \
+    && cd Maxent \
+    && make distribution \
+    && cp maxent.jar /usr/local/lib/R/site-library/dismo/java/maxent.jar \
+    && cd .. \
+    && rm -rf Maxent
 
 EXPOSE 3838
 
