Use older compose ver and single network

--- a/shinyproxy/application.yml
+++ b/shinyproxy/application.yml
@@ -12,7 +12,7 @@ proxy:
     description: Finzone
     container-cmd: ["R", "-e", "finzone::run()"]
     container-image: finzone/geospatial
-    container-network: shinynet
+    container-network: finzone_default
 
 logging:
   file:
